made final updates

--- a/thefeed.html
+++ b/thefeed.html
@@ -7,9 +7,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>The Feed</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="img/favicon.png">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body id="feedmain">
@@ -17,13 +18,13 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <header>
-                <a href="index.html"><img src="img/feed.gif" alt="" width="200"></a> 
+                <a href="index.html"><img src="img/feed.gif" alt="" width="200" class="gif"></a> 
                 <h1>The Feed</h1>
         </header>
 
         <secion class="page">
             <nav class="navigate">
-                <h2>Friends</h2>
+                <h2>Feeds</h2>
                 <h3>Janell Wilson</h3>
                 <h3>Lili Broce</h3>
                 <h3>Sydney Waldrop</h3>
@@ -86,7 +87,6 @@
         </section>
 
         <footer>
-
         </footer>
         <script src="" async defer></script>
     </body>
