updated friends links

--- a/thefeed.html
+++ b/thefeed.html
@@ -24,62 +24,82 @@
 
         <secion class="page">
             <nav class="navigate">
-                <h2>Feeds</h2>
-                <h3>Janell Wilson</h3>
-                <h3>Lili Broce</h3>
-                <h3>Sydney Waldrop</h3>
-                <h3>Lucas Brodsky</h3>
-                <h3>Gaby Hernandez</h3>
-                <h3>Anijah McLaurin</h3>
-                <h3>Frances Lynch</h3>
-                <h3>Kelly Regino</h3>
-                <h3>Aleeza Khan</h3>
-                <h3>Carrie Hott</h3>
+                <h2>Friends</h2>
+                <a href="https://jdwilson19.github.io/thefeed/" target="_blank">
+                    <h3>Janell Wilson</h3>
+                </a>
+                <a href="" target="_blank">
+                    <h3>Lili Broce</h3>
+                </a>
+                <a href="https://smwaldrop.github.io/thefeed/" target="_blank">
+                    <h3>Sydney Waldrop</h3>
+                </a>
+                <a href="https://lbrod20.github.io/the_feed/" target="_blank">
+                    <h3>Lucas Brodsky</h3>
+                </a>
+                <a href="https://gabyhernandez14.github.io/thefeed/" target="_blank">
+                    <h3>Gaby Hernandez</h3>
+                </a>
+                <a href="https://amclaurin30.github.io/the-feed/" target="_blank">
+                    <h3>Anijah McLaurin</h3>
+                </a>
+                <a href="" target="_blank">
+                    <h3>Frances Lynch</h3>
+                </a>
+                <a href="https://kmregino.github.io/kellyr_thefeed/" target="_blank">
+                    <h3>Kelly Regino</h3>
+                </a>
+                <a href="https://aleezazkhan.github.io/aleeza_thefeed/" target="_blank">
+                    <h3>Aleeza Khan</h3>
+                </a>
+                <a href="" target="_blank">
+                    <h3>Carrie Hott</h3>
+                </a>
             </nav>
 
             <main> 
                 <section class="screenbox">
-                    <img src="img/spotify.PNG" alt="">
+                    <img src="img/spotify.PNG" alt="screenshot of spotify showing 'open this wall' by Berloiz">
                     <h3>New Berloiz jazz house album</h3>
                 </section>
                 <section class="screenbox">
-                    <img src="img/figma.PNG" alt="">
+                    <img src="img/figma.PNG" alt="screenshot of figma mobile showing numerous designed website pages ready for prototype">
                     <h3>Website redesign in figma for my work</h3>
                 </section>
                 <section class="picbox">
-                    <img src="img/notes.png" alt="">
+                    <img src="img/notes.png" alt="CSS textbook open next to an ipad with notes">
                     <h3>Late night HTML notes</h3>
                 </section>
                 <section class="picbox">
-                    <img src="img/code.png" alt="">
+                    <img src="img/code.png" alt="a laptop with C code next to a mug with tea in it">
                     <h3>Early morning C programming</h3>
                 </section>
                 <section class="screenbox">
-                    <img src="img/gmail.PNG" alt="">
+                    <img src="img/gmail.PNG" alt="screenshot showing gmail mailbox">
                     <h3>Daily email check in</h3>
                 </section>
                 <section class="screenbox">
-                    <img src="img/alarm.PNG" alt="">
+                    <img src="img/alarm.PNG" alt="screenshot of the clock app showing three 8 am alarms set">
                     <h3>Alarms set for 9 am class</h3>
                 </section>
                 <section class="picbox">
-                    <img src="img/f1.png" alt="">
+                    <img src="img/f1.png" alt="computer monitor showing the cockpit of an f1 car with a sim racing wheel in front">
                     <h3>Formula 1 racing video game</h3>
                 </section>
                 <section class="picbox">
-                    <img src="img/computer.png" alt="">
+                    <img src="img/computer.png" alt="computer monitor showing a CS lab pdf with a cup of tea below">
                     <h3>Night time CS lab check in</h3>
                 </section>
                 <section class="screenbox">
-                    <img src="img/maps.PNG" alt="">
+                    <img src="img/maps.PNG" alt="screenshot of google maps, showing san francisco with saved and favorite locations">
                     <h3>Maps with my favorite locations</h3>
                 </section>
                 <section class="screenbox">
-                    <img src="img/home.PNG" alt="">
+                    <img src="img/home.PNG" alt="screenshot of an apple homescreen with three large widgets">
                     <h3>Home screen with only widgets</h3>
                 </section>
                 <section class="screenbox">
-                    <img src="img/soundmap.PNG" alt="">
+                    <img src="img/soundmap.PNG" alt="screenshot of an ios game where colorful circles can be opened for songs">
                     <h3>Pokemon go type game where you collect songs</h3>
                 </section>
                 
