--- a/thefeed.html
+++ b/thefeed.html
@@ -43,7 +43,7 @@
                 <a href="https://amclaurin30.github.io/the-feed/" target="_blank">
                     <h3>Anijah McLaurin</h3>
                 </a>
-                <a href="" target="_blank">
+                <a href="https://franceslynch.github.io/thefeed/" target="_blank">
                     <h3>Frances Lynch</h3>
                 </a>
                 <a href="https://kmregino.github.io/kellyr_thefeed/" target="_blank">
@@ -51,9 +51,6 @@
                 </a>
                 <a href="https://aleezazkhan.github.io/aleeza_thefeed/" target="_blank">
                     <h3>Aleeza Khan</h3>
-                </a>
-                <a href="" target="_blank">
-                    <h3>Carrie Hott</h3>
                 </a>
             </nav>
 
